# oe-alliance-e2-skindefault

./: .gitignore  Makefile.am  README.md  configure.ac  skin.xml  skin_default.xml  skin_default_windowstyle.xml
fonts/: Makefile.am
skin_1080/: Makefile.am
skin_1080/buttons/: Makefile.am
skin_default/: Makefile.am  skin.xml
skin_default/buttons/: Makefile.am
skin_default/countries/: Makefile.am
skin_default/epg/: Makefile.am
skin_default/extensions/: Makefile.am
skin_default/icons/: Makefile.am
skin_default/infobar/: Makefile.am
skin_default/menu/: Makefile.am
skin_default/piconbg/: Makefile.am
skin_default/screens/: Makefile.am
skin_default/skin_default/: Makefile.am
skin_fallback_1080/: Makefile.am
skin_fallback_1080/buttons/: Makefile.am
skin_fallback_1080/extensions/: Makefile.am
skin_fallback_1080/icons/: Makefile.am
skin_fallback_1080/infobar/: Makefile.am
skin_fallback_1080/screens/: Makefile.am
