AC_INIT([enigma2-skindefault],[1.0])
AM_INIT_AUTOMAKE([foreign])

# Silent rules are available since 1.11, but older versions
# are still in use. So don't use them unconditionally.
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AM_PATH_PYTHON

AC_OUTPUT([
Makefile
fonts/Makefile
skin_default/Makefile
skin_default/buttons/Makefile
skin_default/countries/Makefile
skin_default/epg/Makefile
skin_default/extensions/Makefile
skin_default/icons/Makefile
skin_default/infobar/Makefile
skin_default/menu/Makefile
skin_default/piconbg/Makefile
skin_default/screens/Makefile
skin_default/skin_default/Makefile
skin_fallback_1080/Makefile
skin_fallback_1080/buttons/Makefile
skin_fallback_1080/icons/Makefile
])
