SUBDIRS = buttons countries epg extensions icons infobar piconbg screens

installdir = $(datadir)/enigma2/skin_default
dist_install_DATA = arrowdown.png \
    arrowup.png \
    bar_ber.png \
    bar_snr.png \
    border_eventinfo.png \
    div-h.png \
    div-v.png \
    epg_more.png \
    epg_next.png \
    epg_now.png \
    lcd_picon_default.png \
    no_coverArt.png \
    noprev.png \
    picon_default.png \
    position_arrow.png \
    position_pointer.png \
    position_pointer2.png \
    prev.png \
    progress_bg.png \
    progress_big.png \
    progress_small.png \
    rc.png \
    rcold.png \
    slider_back.png \
    slider.png \
    vkey_icon.png