installdir = $(datadir)/enigma2/skin_default/buttons

dist_install_DATA = blue_pressed.png \
    blue.png \
    button_blue_off.png \
    button_blue.png \
    button_green_off.png \
    button_green.png \
    button_red_off.png \
    button_red.png \
    button_yellow_off.png \
    button_yellow.png \
    green-big.png \
    green.png \
    key_0.png \
    key_1.png \
    key_2.png \
    key_3.png \
    key_4.png \
    key_5.png \
    key_6.png \
    key_7.png \
    key_8.png \
    key_9.png \
    key_back_fill.png \
    key_blue.png \
    key_blue_fill.png \
    key_green.png \
    key_green_fill.png \
    key_info.png \
    key_menu.png \
    key_ok.png \
    key_red.png \
    key_red_fill.png \
    key_text.png \
    key_yellow.png \
    key_yellow_fill.png \
    key-blue.png \
    key-exit.png \
    key-green.png \
    key-red.png \
    key-yellow.png \
    mp_buttons.png \
    rec.png \
    red-big.png \
    red.png \
    vkey_all.png \
    vkey_backspace.png \
    vkey_bg.png \
    vkey_bg_l.png \
    vkey_bg_m.png \
    vkey_bg_r.png \
    vkey_blue.png \
    vkey_blue_l.png \
    vkey_blue_m.png \
    vkey_blue_r.png \
    vkey_clear.png \
    vkey_clr.png \
    vkey_delete.png \
    vkey_enter.png \
    vkey_esc.png \
    vkey_exit.png \
    vkey_first.png \
    vkey_green.png \
    vkey_green_l.png \
    vkey_green_m.png \
    vkey_green_r.png \
    vkey_icon.png \
    vkey_last.png \
    vkey_left.png \
    vkey_locale.png \
    vkey_ok.png \
    vkey_red.png \
    vkey_red_l.png \
    vkey_red_m.png \
    vkey_red_r.png \
    vkey_right.png \
    vkey_sel.png \
    vkey_sel_l.png \
    vkey_sel_m.png \
    vkey_sel_r.png \
    vkey_shift.png \
    vkey_shift0.png \
    vkey_shift1.png \
    vkey_shift2.png \
    vkey_shift3.png \
    vkey_shift_sel.png \
    vkey_space.png \
    vkey_space_alt.png \
    vkey_text.png \
    vkey_yellow.png \
    vkey_yellow_l.png \
    vkey_yellow_m.png \
    vkey_yellow_r.png \
    yellow.png
