installdir = $(datadir)/enigma2/skin_default/buttons

dist_install_DATA = blue_pressed.png \
    blue.svg \
    button_blue_off.png \
    button_blue.png \
    button_green_off.png \
    button_green.png \
    button_red_off.png \
    button_red.png \
    button_yellow_off.png \
    button_yellow.png \
    green-big.png \
    green.svg \
    grey.png \
    key_0.png \
    key_1.png \
    key_2.png \
    key_3.png \
    key_4.png \
    key_5.png \
    key_6.png \
    key_7.png \
    key_8.png \
    key_9.png \
    key_back_fill.png \
    key_blue.png \
    key_blue_fill.png \
    key_green.png \
    key_green_fill.png \
    key_help.png \
    key_info.png \
    key_left.png \
    key_next.png \
    key_menu.png \
    key_ok.png \
    key_prev.png \
    key_red.png \
    key_red_fill.png \
    key_right.png \
    key_text.png \
    key_yellow.png \
    key_yellow_fill.png \
    key-blue.png \
    key-exit.png \
    key-green.png \
    key-red.png \
    key-yellow.png \
    mp_buttons.png \
    rec.png \
    red-big.png \
    red.svg \
    vkey_all.png \
    vkey_backspace.svg \
    vkey_bg.png \
    vkey_bg_l.svg \
    vkey_bg_m.svg \
    vkey_bg_r.svg \
    vkey_blue.png \
    vkey_blue_l.svg \
    vkey_blue_m.svg \
    vkey_blue_r.svg \
    vkey_clear.svg \
    vkey_clr.png \
    vkey_delete.svg \
    vkey_enter.svg \
    vkey_esc.png \
    vkey_exit.svg \
    vkey_first.svg \
    vkey_green.png \
    vkey_green_l.svg \
    vkey_green_m.svg \
    vkey_green_r.svg \
    vkey_icon.png \
    vkey_last.svg \
    vkey_left.svg \
    vkey_locale.svg \
    vkey_ok.png \
    vkey_red.png \
    vkey_red_l.svg \
    vkey_red_m.svg \
    vkey_red_r.svg \
    vkey_right.svg \
    vkey_sel.png \
    vkey_sel_l.svg \
    vkey_sel_m.svg \
    vkey_sel_r.svg \
    vkey_shift.svg \
    vkey_shift0.svg \
    vkey_shift1.svg \
    vkey_shift2.svg \
    vkey_shift3.svg \
    vkey_shift_sel.png \
    vkey_space.svg \
    vkey_space_alt.svg \
    vkey_text.svg \
    vkey_yellow.png \
    vkey_yellow_l.svg \
    vkey_yellow_m.svg \
    vkey_yellow_r.svg \
    yellow.svg
