installdir = /usr/share/enigma2/skin_default/epg

install_DATA = BorderBottom.png \
    BorderLeft.png \
    BorderRight.png \
    BorderTop.png \
    CurrentEvent.png \
    CurrentService.png \
    information.png \
    now_next_more_on.png \
    now_next_more.png \
    OtherEvent.png \
    OtherService.png \
    RecordEvent.png \
    SelectedBorderBottom.png \
    SelectedBorderLeft.png \
    SelectedBorderRight.png \
    SelectedBorderTop.png \
    SelectedCurrentEvent.png \
    SelectedEvent.png \
    SelectedInformation.png \
    SelectedRecordEvent.png \
    SelectedZapEvent.png \
    timeline-now-pig.png \
    timeline-now.png \
    TimeLineDate.png \
    TimeLineTime.png \
    ZapEvent.png