installdir = $(datadir)/enigma2/skin_default/extensions

dist_install_DATA = cfg.png \
	directory.png \
	file.png \
	gz.png \
	html.png \
	ipk.png \
	iso.png \
	link-arrow.png \
	link.png \
	lock_off.png \
	lock_on.png \
	log.png \
	lst.png \
	Makefile.am
	movie.png \
	music.png \
	picture.png \
	py.png \
	pyc.png \
	rar.png \
	sh.png \
	tar.png \
	test.txt
	txt.png \
	xml.png \
	zip.png
