installdir = $(datadir)/enigma2/skin_default/extensions

dist_install_DATA = cfg.png \
    directory.png \
    doc.png \
    file.png \
    7z.png \
    html.png \
    ipk.png \
    iso.png \
    link-arrow.png \
    link.png \
    lock_off.png \
    lock_on.png \
    log.png \
    lst.png \
    movie.png \
    music.png \
    picture.png \
    playlist.png \
    py.png \
    pyc.png \
    rar.png \
    sh.png \
    tar.png \
    txt.png \
    xml.png \
    zip.png
