installdir = $(datadir)/enigma2/skin_default/icons

dist_install_DATA =     ask.png \
    az.png \
    backward_large.png \
    backward.png \
    blank.png \
    clock.png \
    dish_scan.png \
    dish.png \
    DVI.png \
    epgclock_add.png \
    epgclock_autotimer.png \
    epgclock_post.png \
    epgclock_pre.png \
    epgclock_prepost.png \
    epgclock_selpost.png \
    epgclock_selpre.png \
    epgclock_selprepost.png \
    epgclock_zap.png \
    epgclock_zaprec.png \
    epgclock.png \
    expandable-plugins.png \
    expandable.png \
    expanded.png \
    expanded-plugins.png \
    faz.png \
    folder.png \
    forward_large.png \
    forward.png \
    fza.png \
    HDMI.png \
    ico_dvb-c.png \
    ico_dvb-s.png \
    ico_dvb-t.png \
    ico_event.png \
    ico_folder.png \
    ico_hbbtv_off.png \
    ico_hbbtv_on.png \
    ico_mp_forward.png \
    ico_mp_pause.png \
    ico_mp_play.png \
    ico_mp_rewind.png \
    ico_mp_stop.png \
    ico_noreplay.png \
    ico_player.png \
    ico_replay.png \
    ico_service_group.png \
    ico_stream.png \
    ico_sub_off.png \
    ico_sub_on.png \
    ico_view.png \
    icon_crypt_off.png \
    icon_crypt.png \
    icon_dolby_off.png \
    icon_dolby.png \
    icon_event.png \
    icon_format_off.png \
    icon_format.png \
    icon_hd_off.png \
    icon_hd_on.png \
    icon_rec_off.png \
    icon_rec.png \
    icon_stableupdate.png \
    icon_txt_off.png \
    icon_txt.png \
    icon_unstableupdate.png \
    icon_update_off.png \
    input_error.png \
    input_info.png \
    input_keyboard-configured.png \
    input_keyboard.png \
    input_mouse-configured.png \
    input_mouse.png \
    input_question.png \
    input_rcnew-configured.png \
    input_rcnew.png \
    input_rcold-configured.png \
    input_rcold.png \
    lcd_DVI.png \
    lcd_HDMI.png \
    lcd_Scart.png \
    lcd_YPbPr.png \
    lock_error.png \
    lock_off.png \
    lock_on.png \
    lock.png \
    lockBouquet.png \
    loop.png \
    marker.png \
    movie_play_rec.png \
    movie_play.png \
    movielist.png \
    mp_buttons.png \
    mp_wb_buttons.png \
    network_wired-active.png \
    network_wired-inactive.png \
    network_wired.png \
    network_wireless-active.png \
    network_wireless-inactive.png \
    network_wireless.png \
    newtop.png \
    oldtop.png \
    part_0_4.png \
    part_1_4.png \
    part_2_4.png \
    part_3_4.png \
    part_4_4.png \
    part_new.png \
    part_unwatched.png \
    pause_large.png \
    pause.png \
    play_large.png \
    play.png \
    playlist.png \
    playlistquit.png \
    plugin.png \
    quit.png \
    rass_logo.png \
    rass_page1.png \
    rass_page2.png \
    rass_page3.png \
    rass_page4.png \
    RCA.png \
    record.png \
    redx.png \
    rep.png \
    scan-c.png \
    scan-s.png \
    scan-t.png \
    Scart-YPbPr.png \
    Scart.png \
    shuffle.png \
    slow_large.png \
    slow.png \
    stop_large.png \
    stop.png \
    timer_autotimer.png \
    timer_done.png \
    timer_failed.png \
    timer_off.png \
    timer_prep.png \
    timer_rec.png \
    timer_rep.png \
    timer_wait.png \
    timer_zap.png \
    trashcan.png \
    unhandled-key-night.png \
    unhandled-key.png \
    unlock.png \
    unlockBouquet.png \
    verticalline.png \
    verticalline-plugins.png \
    YPbPr.png \
    za.png