installdir = $(datadir)/enigma2/skin_default/infobar

dist_install_DATA = 1stinfobar.png \
    2ndinfobareventinfo.png \
    event-info-bg.png \
    infobareventprogress.png \
    Mediaplayerbar_gray.png \
    Mediaplayerbar_purple.png \
    movie_infobar-bg.png \
    quickepg-infobbar.png \
    radio-infobar-bg.png \
    statusbar_bkgrd.png