installdir = $(datadir)/enigma2/skin_default/screens

dist_install_DATA = b_b.png \
    b_bl.png \
    b_br.png \
    b_l.png \
    b_r.png \
    b_t.png \
    b_tl.png \
    b_tr.png \
    fs-bg-bot-wizzard.png \
    fs-bg-bot.png \
    fs-bg-top-small.png \
    fs-bg-top-wizzard.png \
    fs-bg-top.png \
    mute.png \
    progress_medium.png \
    pts-bg.png \
    pvr-bg.png \
    servicescan_progress_big.png \
    unhandled-key.png \
    volume_background.png \
    volume_up.png