installdir = $(datadir)/enigma2/skin_fallback_1080/buttons

dist_install_DATA = blue.png \
    green.png \
    key_0 \
    key_1 \
    key_2 \
    key_3 \
    key_4 \
    key_5 \
    key_6 \
    key_7 \
    key_8 \
    key_9 \
    key_audio \
    key_blue \
    key_channel \
    key_exit \
    key_f1 \
    key_f2 \
    key_f3 \
    key_green \
    key_help \
    key_info \
    key_left \
    key_menu \
    key_next \
    key_ok \
    key_prev \
    key_prevnext \
    key_red \
    key_right \
    key_text \
    key_tv \
    key_video \
    key_yellow \
    red.png \
    vkey_backspace.png \
    vkey_bg_l.png \
    vkey_bg_m.png \
    vkey_bg_r.png \
    vkey_blue_l.png \
    vkey_blue_m.png \
    vkey_blue_r.png \
    vkey_clear.png \
    vkey_delete.png \
    vkey_enter.png \
    vkey_exit.png \
    vkey_first.png \
    vkey_green_l.png \
    vkey_green_m.png \
    vkey_green_r.png \
    vkey_last.png \
    vkey_left.png \
    vkey_locale.png \
    vkey_red_l.png \
    vkey_red_m.png \
    vkey_red_r.png \
    vkey_right.png \
    vkey_sel_l.png \
    vkey_sel_m.png \
    vkey_sel_r.png \
    vkey_shift.png \
    vkey_shift0.png \
    vkey_shift1.png \
    vkey_shift2.png \
    vkey_shift3.png \
    vkey_space.png \
    vkey_space_alt.png \
    vkey_text.png \
    vkey_yellow_l.png \
    vkey_yellow_m.png \
    vkey_yellow_r.png \
    yellow.png
