installdir = $(datadir)/enigma2/skin_fallback_1080/buttons

dist_install_DATA = \
	key_0.png \
    key_1.png \
    key_2.png \
    key_3.png \
    key_4.png \
    key_5.png \
    key_6.png \
    key_7.png \
    key_8.png \
    key_9.png \
    key_audio.png \
    key_blue.png \
    key_channel.png \
    key_exit.png \
    key_f1.png \
    key_f2.png \
    key_f3.png \
    key_green.png \
    key_help.png \
    key_info.png \
    key_left.png \
    key_menu.png \
    key_next.png \
    key_ok.png \
    key_prev.png \
    key_prevnext.png \
    key_radio.png \
    key_red.png \
    key_right.png \
    key_text.png \
    key_tv.png \
    key_video.png \
    key_yellow.png \
    vkey_backspace.png \
    vkey_bg_l.png \
    vkey_bg_m.png \
    vkey_bg_r.png \
    vkey_blue_l.png \
    vkey_blue_m.png \
    vkey_blue_r.png \
    vkey_clear.png \
    vkey_delete.png \
    vkey_enter.png \
    vkey_exit.png \
    vkey_first.png \
    vkey_green_l.png \
    vkey_green_m.png \
    vkey_green_r.png \
    vkey_icon.png \
    vkey_last.png \
    vkey_left.png \
    vkey_locale.png \
    vkey_red_l.png \
    vkey_red_m.png \
    vkey_red_r.png \
    vkey_right.png \
    vkey_sel_l.png \
    vkey_sel_m.png \
    vkey_sel_r.png \
    vkey_shift.png \
    vkey_shift0.png \
    vkey_shift1.png \
    vkey_shift2.png \
    vkey_shift3.png \
    vkey_space.png \
    vkey_space_alt.png \
    vkey_text.png \
    vkey_yellow_l.png \
    vkey_yellow_m.png \
    vkey_yellow_r.png
