installdir = $(datadir)/enigma2/skin_fallback_1080/icons

dist_install_DATA = epgclock.png \
    bullet.png \
    epgclock_add.png \
    epgclock_autotimer.png \
    epgclock_post.png \
    epgclock_pre.png \
    epgclock_prepost.png \
    epgclock_selpost.png \
    epgclock_selpre.png \
    epgclock_selprepost.png \
    epgclock_zap.png \
    epgclock_zaprec.png \
    expandable.png \
    expandable-plugins.png \
    expanded.png \
    expanded-plugins.png \
    input_error.png \
    input_info.png \
    input_message.png \
    input_question.png \
    input_warning.png \
    lock_error.png \
    lock_off.png \
    lock_on.png \
    menu_on.png \
    menu_off.png \
    movie_play_rec.png \
    movie_play.png \
    part_0_4.png \
    part_1_4.png \
    part_2_4.png \
    part_3_4.png \
    part_4_4.png \
    part_new.png \
    part_unwatched.png \
    update_off.png \
    update_stable.png \
    update_unstable.png \
    verticalline.png \
    verticalline-plugins.png
